# remnastore

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  test_frontend_account_linking.js
.githooks/: pre-push
.github/: pull_request_template.md
.github/workflows/: ci.yml  docker-publish.yml
apps/admin/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/api/: README.md
apps/bot/: README.md
apps/web/: .env.example  API_EXAMPLES.md  ATTRIBUTIONS.md  DATABASE_STRUCTURE.md  FRONTEND_CONTRACT.md  OAUTH_SETUP.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  TELEGRAM_DEPLOYMENT.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
common/: __init__.py  logging_setup.py
deploy/: .env.example  compose.yml
docs/: account-linking.md  architecture.md  bot-inline-menu-v1.md  broadcasts-v1.md  code-documentation.md  deploy-vds.md  launch-progress.md  launch-roadmap.md  legacy-migration.md  local-run.md  logging-observability.md  nginx-vhost-example.md  product-readiness-plan.md  production-env.md  release-checklist.md  release-process.md  rollback-checklist.md  security-checklist.md  smoke-checklist.md
docs/decisions/: 2026-03-14-broadcast-runtime-and-ux.md  README.md
docs/releases/: README.md  TEMPLATE.md
docs/runbooks/: README.md  bot.md  mini-app.md  (+3 more)
scripts/: coverage.sh  dev.sh  install-git-hooks.sh  legacy_migration.py  pr-check.sh  repair_trial_flags.py  stack.sh  test.sh  update-telegram-web-app-vendor.sh
(+269 files in other folders)
