[project]
name = "remnastore"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.6.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.3.0",
    "remnawave>=2.6.3",
    "sqlalchemy[asyncio]>=2.0.0",
    "uvicorn[standard]>=0.30.0",
    "alembic>=1.13.3",
]
